Corrigindo erros e adicionando método print