@@ -1,13 +1,13 @@
 package org.example;
 
 /**
- *  removeFirst(): Remove um nó do início da lista e retorna seu valor. O(1)
-    remove(int index): Remove um nó da posição especificada da lista, e retorna seu valor. O(n)
-    getFirst(): Obtêm um valor no início da lista. O(1)
-
-    getLast(): Obtêm um valor no fim da lista. O(1)
-    get(int position): Retorna o valor do nó na posição especificada. O(n)
-    toString(): Exibe todos os elementos da lista, do início ao fim, separados por um espaço. O(n)
+ * removeFirst(): Remove um nó do início da lista e retorna seu valor. O(1)
+ * remove(int index): Remove um nó da posição especificada da lista, e retorna seu valor. O(n)
+ * getFirst(): Obtêm um valor no início da lista. O(1)
+ * <p>
+ * getLast(): Obtêm um valor no fim da lista. O(1)
+ * get(int position): Retorna o valor do nó na posição especificada. O(n)
+ * toString(): Exibe todos os elementos da lista, do início ao fim, separados por um espaço. O(n)
  */
 
 public class ListaDuplamenteEncadeada {
@@ -15,12 +15,22 @@ public class ListaDuplamenteEncadeada {
     Elemento fim;
     int tamanho;
 
-    public void addFirst(int valor){
+    public void print() {
+        Elemento elemento = inicio;
+        if (size() > 0) {
+            for (int i = 0; i < size(); i++) {
+                System.out.print(elemento.valor + " --> ");
+                elemento = elemento.proximo;
+            }
+        }
+    }
+
+    public void addFirst(int valor) {
         Elemento novo = new Elemento(valor);
-        if(size() == 0){
+        if (size() == 0) {
             this.inicio = novo;
             this.fim = novo;
-        }else{
+        } else {
             novo.proximo = inicio;
             inicio.anterior = novo;
             inicio = novo;
@@ -28,12 +38,12 @@ public class ListaDuplamenteEncadeada {
         addTamanho();
     }
 
-    public void addLast(int valor){
+    public void addLast(int valor) {
         Elemento novo = new Elemento(valor);
-        if(size() == 0){
+        if (size() == 0) {
             this.inicio = novo;
             this.fim = novo;
-        }else{
+        } else {
             novo.anterior = fim;
             fim.proximo = novo;
             fim = novo;
@@ -41,103 +51,119 @@ public class ListaDuplamenteEncadeada {
         addTamanho();
     }
 
-    public void add(int valor, int index){
+    public void add(int valor, int index) {
         Elemento novo = new Elemento(valor);
         Elemento atual = inicio;
-        if(index == 0){
+        if (index == 0) {
             addFirst(valor);
             return;
-
-        }else if(index == size()){
+        } else if (index == size()) {
             addLast(valor);
             return;
-        
-        }else if(index > size() || index < 0){
-            System.out.println("Error: index invalido. Ocorreu um erro ao inserir o valor "+valor+" na posição "+index);
-
+        } else if (index > size() || index < 0) {
+            System.out.println("Error: index invalido. Ocorreu um erro ao inserir o valor " + valor + " na posição " + index);
             return;
-        }else if(index >= (size() / 2)){
+        } else if (index >= (size() / 2)) {
             atual = fim;
-            for(int i = size(); i != index; i--){
+            for (int i = size() - 1; i > index; i--) {
                 atual = atual.anterior;
             }
-
-        }else if(index < (size() / 2)){
+        } else if (index < (size() / 2)) {
             atual = inicio;
-            for(int i = 0; i != index; i++){
+            for (int i = 0; i < index; i++) {
                 atual = atual.proximo;
             }
         }
-
         novo.proximo = atual;
         novo.anterior = atual.anterior;
-        novo.anterior.proximo = novo;
-        novo.proximo.anterior = novo;
+        atual.anterior.proximo = novo;
+        atual.anterior = novo;
+        addTamanho();
     }
-    public void removeFirst(){
-        // copiar lógica de baixo
-        inicio = inicio.proximo;
-        inicio.anterior = null;
 
-    }
-    public void removeLast(){
-        if(size() == 1){
+    public void removeFirst() {
+        if (size() == 1) {
             clear();
-        }else{
-            fim = fim.anterior;
-            fim.proximo = null;
+        } else {
+            inicio = inicio.proximo;
+            inicio.anterior = null;
+            removeTamanho();
         }
     }
-    public Elemento remove(int index){
-        Elemento elemento = null;
-        if(size() > 0){
-            elemento = inicio;
+
+    public void removeLast() {
+        if (size() == 1) {
+            clear();
+        } else {
+            fim = fim.anterior;
+            fim.proximo = null;
+            removeTamanho();
+        }
+    }
+
+    public void remove(int index) {
+        if (size() > 0) {
+            Elemento elemento = inicio;
+            if (index == 0) {
+                removeFirst();
+                return;
+            }
+            if (index == size() - 1) {
+                removeLast();
+                return;
+            }
             // tratar situação indice maior que lista, deveria retornar nulo.
-            if(tamanho > index){
-                for(int i = 0; i < index; i++){
+            if (index >= 0 && index < size()) {
+                for (int i = 0; i < index; i++) {
                     elemento = elemento.proximo;
                 }
             }
-            Elemento elementoAnterior  = elemento.anterior;
+            Elemento elementoAnterior = elemento.anterior;
             Elemento elementoProximo = elemento.proximo;
             elementoAnterior.proximo = elementoProximo;
             elementoProximo.anterior = elementoAnterior;
         }
-        
-        return elemento;
     }
 
-    public int getFirst(){
+    public int getFirst() {
         return inicio.valor;
     }
-    public int getLast(){
+
+    public int getLast() {
         return fim.valor;
     }
-    public int get(int index){
-       Elemento elemento = null;
-        if(size() > 0){
+
+    public int get(int index) {
+        Elemento elemento = null;
+        if (size() > 0) {
             elemento = inicio;
-            if(tamanho > index){
-                for(int i = 0; i <= index; i++){
+            if (tamanho > index) {
+                for (int i = 0; i < index; i++) {
                     elemento = elemento.proximo;
                 }
             }
         }
         return elemento.valor;
-    }   
+    }
+
     // utilitarios
     // tamanho, limpar, e tamanho mais 1
-    private void addTamanho(){
+    private void addTamanho() {
         tamanho++;
     }
 
-    public int size(){
+    private void removeTamanho() {
+        tamanho--;
+    }
+
+    public int size() {
         return tamanho;
     }
 
-    public void clear(){
+    public void clear() {
         inicio = null;
         fim = null;
+        tamanho = 0;
     }
 
     public static void main(String[] args) {
@@ -150,19 +176,21 @@ public class ListaDuplamenteEncadeada {
         lista.addFirst(10);
         lista.addLast(11);
         lista.add(12, 1);
-        System.out.println("Lista com elementos adicionados");
-        System.out.println("Elemento valor início: " + lista.inicio);
-        System.out.println("Elemento valor fim: " + lista.fim);
-        System.out.println("Tamanho da lista: " + lista.tamanho);
-        System.out.println("-------------------------------");
-        lista.removeFirst();
-        lista.removeLast();
-        lista.remove(0);
-        System.out.println("Lista com elementos removidos");
-        System.out.println("Elemento valor início: " + lista.inicio);
-        System.out.println("Elemento valor fim: " + lista.fim);
-        System.out.println("Tamanho da lista: " + lista.tamanho);
-        System.out.println("-------------------------------");
+        lista.print();
+//        System.out.println("Lista com elementos adicionados");
+//        System.out.println("Elemento valor no índice 0: " + lista.get(0));
+//        System.out.println("Elemento valor no índice 1: " + lista.get(1));
+//        System.out.println("Elemento valor no índice 2: " + lista.get(2));
+//        System.out.println("Tamanho da lista: " + lista.tamanho);
+//        System.out.println("-------------------------------");
+//        lista.removeFirst();
+//        lista.removeLast();
+//        lista.remove(0);
+//        System.out.println("Lista com elementos removidos");
+//        System.out.println("Elemento valor início: " + lista.inicio);
+//        System.out.println("Elemento valor fim: " + lista.fim);
+//        System.out.println("Tamanho da lista: " + lista.tamanho);
+//        System.out.println("-------------------------------");
 
     }
 }
